# SummerSchool

./: CMakeLists.txt  README.md
src/1.TemplateFunctions/: CMakeLists.txt
src/1.TemplateFunctions/src/: main.cpp
src/2.TemplateClasses/: CMakeLists.txt
src/2.TemplateClasses/src/: main.cpp
src/3.TemplateSpecialization/: CMakeLists.txt
src/3.TemplateSpecialization/src/: main.cpp
src/4.TemplateInstantiation/: CMakeLists.txt
src/4.TemplateInstantiation/include/: Object.h
src/4.TemplateInstantiation/src/: Object.cpp  main.cpp
src/5.CRTP/: CMakeLists.txt
src/5.CRTP/include/: ObjectCounter.h
src/5.CRTP/src/: main.cpp
src/6.TypeTraits/: CMakeLists.txt
src/6.TypeTraits/include/: TypeTraits.h
src/6.TypeTraits/src/: main.cpp
src/7.VariadicTemplates/: CMakeLists.txt
src/7.VariadicTemplates/include/: MeasureTime.h
src/7.VariadicTemplates/src/: main.cpp
src/DataStructures/: CMakeLists.txt
src/DataStructures/include/: Amount.h  Complex.h
src/DataStructures/src/: Amount.cpp  Complex.cpp
